6815790: G1: Missing MemoryPoolMXBeans with -XX:+UseG1GC

It introduces the necessary memory pools for G1.

Reviewed-by: mchung, ysr